<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>yanda</artifactId>
	<packaging>jar</packaging>
	<groupId>com.yanda</groupId>
	<name>yanda</name>
	<version>1.0.0-SNAPSHOT</version>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.2.RELEASE</version>
	</parent>

	<properties>
		<java.version>1.8</java.version>
		<start-class>com.yanda.Application</start-class>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
			<exclusions>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
		    <groupId>com.github.pagehelper</groupId>
		    <artifactId>pagehelper-spring-boot-starter</artifactId>
		    <version>1.2.3</version>
		</dependency>
		<dependency>
		    <groupId>tk.mybatis</groupId>
		    <artifactId>mapper-spring-boot-starter</artifactId>
		    <version>1.2.3</version>
		</dependency>
		<dependency>  
            <groupId>org.springframework.boot</groupId>  
            <artifactId>spring-boot-starter-data-redis</artifactId>  
        </dependency>

		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.4</version>
		</dependency>
		<dependency>
		    <groupId>commons-lang</groupId>
		    <artifactId>commons-lang</artifactId>
		    <version>2.6</version>
		</dependency>
		
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.31</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.5</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.9</version>
		</dependency>
		<dependency>
		    <groupId>com.belerweb</groupId>
		    <artifactId>pinyin4j</artifactId>
		    <version>2.5.0</version>
		</dependency>
		<dependency>
		  <groupId>com.github.qcloudsms</groupId>
		  <artifactId>qcloudsms</artifactId>
		  <version>1.0.2</version>
		</dependency>
		<dependency>
		  <groupId>it.sauronsoftware</groupId>
		  <artifactId>jave</artifactId>
		  <version>2.0</version>
		</dependency>
		
	</dependencies>
	
	<!-- 用于mian方法运行 -->
	<profiles>
		<profile>
			<id>main</id>
			<dependencies>
				<dependency>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
	<build>
		<finalName>yanda</finalName>

		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
					<layout>ZIP</layout>
					<excludeGroupIds>
						org.springframework, org.springframework.boot, org.springframework.data, org.springframework.ws,
						org.apache.tomcat.embed, org.apache.tomcat, org.apache.xmlbeans, org.apache.commons, org.apache.poi, org.apache.httpcomponents, org.apache.geronimo.bundles, org.apache.neethi, org.apache.ws.xmlschema,
						org.mybatis.spring.boot, org.mybatis,
						org.hibernate.common, org.hibernate.javax.persistence, org.hibernate,
						org.webjars.bower,
						org.eclipse.jdt.core.compiler,
						org.codehaus.groovy,
						org.hamcrest,
						org.aspectj,
						org.slf4j,
						org.jboss, org.jboss.logging,
						org.thymeleaf,
						org.unbescape,
						org.javassist,
						org.scala-lang,
						org.yaml,
						org.apache.cxf,
						org.ow2.asm,
						org.codehaus.woodstox,
						org.json,
						commons-httpclient, commons-beanutils, commons-codec, commons-collections, commons-io, commons-lang, commons-logging,
						mysql,
						javax.servlet,
						com.alibaba,
						com.trs,
						dom4j,
						jaxen,
						net.sf.json-lib, net.sf.ezmorph, net.sourceforge.jexcelapi, net.sourceforge.nekohtml,
						com.jayway, com.sun.xml.bind,
						com.fasterxml,
						com.github.qcloudsms,
						ch.qos.logback,
						javax.validation,
						javax.xml.bind,
						nz.net.ultraq.thymeleaf,
						antlr,
						aopalliance,
						aspectj,
						com.fasterxml.jackson.core,
						javax.transaction, javax.persistence,
						junit,
						log4j,
						stax,
						xml-apis, xml-resolver,
						xerces,
						ognl,
						com.github.pagehelper,
						com.github.jsqlparser,
						com.belerweb,
						com.vaadin.external.google,
						wsdl4j,
						redis.clients,
						tk.mybatis,
						it.sauronsoftware
					</excludeGroupIds>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.mybatis.generator</groupId>
				    <artifactId>mybatis-generator-maven-plugin</artifactId>
				    <version>1.3.6</version>
					<configuration>
						<configurationFile>src/main/resources/mybatis/generator.xml</configurationFile>
						<verbose>true</verbose>
						<overwrite>true</overwrite>
					</configuration>
					<executions>
						<execution>
							<id>Generate MyBatis Artifacts</id>
							<goals>
								<goal>generate</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
					        <groupId>tk.mybatis</groupId>
					        <artifactId>mapper</artifactId>
					        <version>3.5.2</version>
				        </dependency>
				        <dependency>
                        <groupId>com.itfsw</groupId>
                        <artifactId>mybatis-generator-plugin</artifactId>
                        <version>1.1.3-SNAPSHOT</version>
                    </dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

</project>